# ses-mailbox

./: .dockerignore  Cargo.toml  Dockerfile
src/: aws.rs  main.rs
