[package]
name = "ses-mailbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.12.0"
aws-sdk-sqs = "1.10.0"
aws-smithy-types = { version = "1.1.2", features = ["byte-stream-poll-next"] }

futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }

directory = { git = "https://github.com/conradludgate/mail-server", branch = "v0.5.0-alt" }
imap = { git = "https://github.com/conradludgate/mail-server", branch = "v0.5.0-alt" }
jmap = { git = "https://github.com/conradludgate/mail-server", branch = "v0.5.0-alt" }
jmap_proto = { git = "https://github.com/conradludgate/mail-server", branch = "v0.5.0-alt" }
managesieve = { git = "https://github.com/conradludgate/mail-server", branch = "v0.5.0-alt" }
smtp = { git = "https://github.com/conradludgate/mail-server", branch = "v0.5.0-alt", features = [
    "local_delivery",
] }
store = { git = "https://github.com/conradludgate/mail-server", branch = "v0.5.0-alt" }
utils = { git = "https://github.com/conradludgate/mail-server", branch = "v0.5.0-alt" }

[features]
# default = ["sqlite", "postgres", "mysql", "rocks", "elastic", "s3", "redis"]
default = ["postgres", "s3"]
sqlite = ["store/sqlite"]
foundationdb = ["store/foundation"]
postgres = ["store/postgres"]
mysql = ["store/mysql"]
rocks = ["store/rocks"]
elastic = ["store/elastic"]
s3 = ["store/s3"]
redis = ["store/redis"]
